--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -22,7 +22,8 @@
                             by {{book.volumeInfo.authors}}
                             <br> published by {{book.volumeInfo.publisher}}
                             <div style="margin-top: 3%">
-                                <button class="ui teal button">See this book</button>
+                                <a href={{book.volumeInfo.infoLink}} class="button" target="_blank"> See this book</a>
+
 
                             </div>
 
