--- a/src/app/search-page/search-page.component.scss
+++ b/src/app/search-page/search-page.component.scss
@@ -1,12 +1,15 @@
 body {
     padding-top: 75px;
     height: 100vh;
+    background: #f2f2f2;
+    font-family: 'Open Sans', sans-serif;
 }
 
 html {
     height: 100vh;
 }
 
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 .search-container {
     width: 490px;
     display: block;
@@ -91,4 +94,53 @@ a.button {
     appearance: button;
     text-decoration: none;
     color: initial;
+}
+
+.row {
+    margin-top: 40px;
+    transform: translate(40px, 40px);
+}
+
+.search {
+    width: 100%;
+    position: relative;
+    display: flex;
+}
+
+.searchTerm {
+    width: 100%;
+    border: 3px solid #00B4CC;
+    border-right: none;
+    padding: 5px;
+    height: 20px;
+    border-radius: 5px 0 0 5px;
+    outline: none;
+    color: #9DBFAF;
+}
+
+.searchTerm:focus {
+    color: #00B4CC;
+}
+
+.searchButton {
+    width: 40px;
+    height: 45px;
+    border: 1px solid #00B4CC;
+    background: #00B4CC;
+    text-align: center;
+    color: #fff;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+
+/*Resize the wrap to see the search bar change!*/
+
+.wrap {
+    width: 30%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
